Fix central alignment on images

--- a/_sass/_cards.scss
+++ b/_sass/_cards.scss
@@ -17,6 +17,7 @@ $shadow: rgba(0, 0, 0, .15);
 
   figure {
     padding: 8%;
+    text-align: left;
 
     .frame {
       height: 180px;
