--- a/_sass/_main.scss
+++ b/_sass/_main.scss
@@ -62,6 +62,10 @@ body {
     text-decoration: none;
   }
 
+  figure {
+    text-align: center;
+  }
+
   p,
   ul {
     margin: .5em 0;
